--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,37 @@
     box-sizing: border-box;
     list-style: none;    
 }
+body{
+    background-color: black;
+    color: white;
+}
+.grid-container{            
+    max-width: 1000px;
+    margin:0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap:20px;
+    margin-bottom: 50px;            
+}
+.header{
+    grid-column-start: 1;
+    grid-column-end: 5;
+    grid-column: 1 / 5;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    grid-row: 1 / 5;
+    /*grid-area:  1 / 1 / 4 / 4;*/
+}
+.RWBY{
+    max-width: 100%;
+    height: auto;
+}
+.nav{
+    grid-column: span 4;
+}
+.content{
+    grid-column: span 4;            
+}
 .nav li{ 
     text-align: center;
     border: 0.5px white solid;
@@ -20,3 +51,4 @@
     clear:both;
     display: table;
 }
+
