--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -7,52 +8,106 @@
 body{
     background-color: black;
     color: white;
-    width: 1000px;
     height: auto;
-}
-.grid-container{            
     max-width: 1000px;
-    margin:0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap:20px;
-    margin-bottom: 50px;            
+    min-width: 300px;
+    width:100%;
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
-.header{
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-column: 1 / 5;
-    grid-row-start: 1;
-    grid-row-end: 5;
-    grid-row: 1 / 5;
-    /*grid-area:  1 / 1 / 4 / 4;*/
-}
-.RWBY{
+#header img{
     width: 100%;
     height: auto;
 }
-.nav{
-    grid-column: span 4;
+div{
+    display:block;
 }
-.content{
-    grid-column: span 4; 
+.grid1{
+    max-width: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;    
     width: 100%;
-    height: auto;           
-}
-.nav li{ 
     text-align: center;
-    border: 0.5px white solid;
-    float:left;
-    width: 24.9999%;
+    font-size: 34px;    
+    padding: 15px 0 15px 0;
+    margin-bottom:20px;
+}
+.col1{
+    border: 0.2px rgba(255,255,255,0.1) solid;
     padding: 15px 0 15px 0;
 }
-.nav li a{
-    color: white;
-    text-decoration: none;    
+.grid2{
+    font-size: 13px;
+    font-family: 'Roboto', sans-serif;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(12,1fr);
+    gap: 20px;
+    font-weight: 100;
+    float: left;
+    margin-right:10px;
+    margin-left:10px;
+    font-weight: 100;  
 }
-.nav li::after{    
+.col2{
+    grid-column: span 3;
+        
+}
+.grid2 img::after{
     content:'';
     clear:both;
     display: table;
 }
-
+.col2 img{   
+    width: 50%;
+    height: auto;
+    float: left;
+    margin-right: 10px;
+}
+.col2 p{
+    width: auto;
+    height: auto;
+}
+@media (max-width:1000px){
+    .grid2{
+        font-size: 13px;
+        font-family: 'Roboto', sans-serif;
+        max-width: 100%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(12,1fr);        
+        gap: 20px;
+        font-weight: 100;  
+    }
+    .col2{
+        width: 100%;
+        grid-column: span 6;
+        float: none;    
+    }
+    .col2 img{
+        width: 100%;
+        height: auto;
+        float: none;
+    }
+}
+@media (max-width:600px){
+    .grid2{       
+        grid-template-columns: 1fr 1fr;
+    }
+    #header img{        
+        background-image: url("../img/header_mobil.png") no-repeat;
+        display:none;
+    }
+    .grid1{
+        max-width: 100%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;    
+        width: 100%;
+        text-align: center;
+        font-size: 34px;    
+        padding: 15px 0 15px 0;
+    }
+}
