--- a/style/style.css
+++ b/style/style.css
@@ -1,123 +1,136 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
 *{
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    list-style: none;    
+    list-style: none
+}
+html{
+    font-size: 12px;    
 }
 body{
-    background-color: black;
-    color: white;
+    text-decoration: none;
+    font-family: 'Merriweather', serif;
+    background: rgb(12, 9, 9);
+    height: 2000px;    
+}
+#container{
+    max-width: 1200px;
     height: auto;
-    max-width: 1000px;
-    min-width: 200px;
-    width:100%;
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-top: 20px;
+    text-align: center;
+    border-right: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 3px solid white;
 }
-#header img{
-    width: 100%;
-    height: auto;
-}
-#header .mobil{
+#mobile-header{
     display: none;
 }
-div{
-    display:block;
-}
-.grid1{
-    max-width: 100%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;    
+#full-header{
     width: 100%;
-    text-align: center;
-    font-size: 34px;    
-    padding: 15px 0 15px 0;
 }
-.col1{
-    border: 0.2px rgba(255,255,255,0.1) solid;
-    padding: 15px 0 15px 0;
+#content{
+    background: black;
+    color:white;
 }
-.grid2{
-    font-size: 13px;
-    font-family: 'Roboto', sans-serif;
-    max-width: 1000px;
+.nav{
+    height: 100%;
+    margin: 0 auto
+}
+.nav ul li{
+    float: left;
+    width: 24.9999%;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(12,1fr);
-    gap: 20px;
-    font-weight: 100;
-    float: left;
-    margin-right:10px;
-    margin-left:10px;
-    font-weight: 100;  
+    padding: 15px 0 15px 0;
+    font-size: 34px;
 }
-.col2{
-    grid-column: span 3;
-        
+.nav ul::after{
+    content: "";
+    clear: both;
+    display: table; 
 }
-.grid2 img::after{
-    content:'';
-    clear:both;
-    display: table;
+.nav ul li a{
+    text-decoration: none;
+    color:white;
 }
-.col2 img{   
-    width: 50%;
-    height: auto;
-    float: left;
-    margin-right: 10px;
-}
-.col2 p{
-    width: auto;
+.Description img{
+    width: 100%;
     height: auto;
 }
-@media (max-width:850px){
-    .grid2{
-        font-size: 13px;
-        font-family: 'Roboto', sans-serif;
-        max-width: 100%;
+#grid-container{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    width: 24.9999%;
+    margin: 20px auto;
+    width:100%;
+}
+#grid-container .Description{
+    margin: 0 5px 0 5px;
+}
+#grid-container .Description img{
+    float:left;
+    width: 49.9999%;
+    margin: 0 auto;
+    padding-bottom: 1rem;    
+    padding-right:1rem;
+}
+#grid-container .Description img::after{
+    content: "";
+    clear: both;
+    display: table; 
+}
+#grid-container .Description p{
+    text-align: left;
+    line-height: 1.5rem;
+}
+
+@media screen and (max-width: 850px){
+    #grid-container{
+        display:grid;
+        grid-template-columns: 1fr 1fr;
+        width: 49.9999%;
         margin: 0 auto;
-        display: grid;
-        grid-template-columns: repeat(12,1fr);        
-        gap: 20px;
-        font-weight: 100;  
+        width:100%;
     }
-    #header .mobil{
+    #grid-container .Description{
+        margin: 0 auto;
+    }
+    #grid-container .Description img{
+        width: 100%;
+        margin: 0 auto;
+        padding: 0;
+    } 
+    #grid-container .Description p{
+        text-align: left;
+        line-height: 2rem;        
+    }
+}
+@media screen and (max-width: 600px){
+    #grid-container{
+        display:grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+    }
+    .Description{
+        width:100%;
+        margin: 0 auto;
+    }
+    .nav ul li{
+        float:none;
+        width: 100%;
+    }
+    .nav{
+        position:sticky;
+        top: 0;
+        display: block;
+        background: black;
+    }
+    #full-header{
         display: none;
     }
-    .col2{
-        width: 100%;
-        grid-column: span 6;
-        float: none;    
-    }
-    .col2 img{
-        width: 100%;
-        height: auto;
-        float: none;
-    }
-}
-@media (max-width:600px){
-    .grid2{       
-        grid-template-columns: 1fr 1fr;
-    }
-    #header img{        
-        background-image: url("../img/header_mobil.png") no-repeat;
-        display:none;
-    }
-    #header .mobil{
+    #mobile-header{
         display: block;
-        width: 100%;
-    }
-    
-    .grid1{
-        max-width: 100%;
-        margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr;    
-        width: 100%;
-        text-align: center;
-        font-size: 34px;    
-        padding: 15px 0 15px 0;
+        width: 99.9999%;
     }
 }
